不对回环地址应用代理